--- a/src/main/resources/templates/selectTicket.html
+++ b/src/main/resources/templates/selectTicket.html
@@ -36,26 +36,40 @@
             </div>
         </div>
     </nav>
-    <div class="row">
-        <table class="table">
-            <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Название фильма</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="cinema: ${sessions}">
-                <td th:text="${cinema.id}"/>
-                <td>
-                    <a th:href="@{|/selectTicket/${cinema.id}|}">
-                        <i class="fa fe-edit"></i>
-                    </a>
-                    <span th:text="${cinema.name}"></span>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+    <div class="row pt-3">
+        <div class="card" style="width: 100%">
+            <div class="card-header">
+                Выбор билета на фильм:
+                <td th:text="${cinema.name}"/>
+            </div>
+            <div class="card-body">
+                <form th:action="@{/selectTicket}" method="POST" th:object="${ticket}">
+                    <input type="hidden" name="id" th:field="*{id}"/>
+                    <div class="form-group">
+                        <label for="name">Имя</label>
+                        <input type="text" class="form-control" name="name" id="name" th:field="*{name}">
+                    </div>
+                    <div class="form-group">
+                        <label for="description">Описание</label>
+                        <input type="text" class="form-control" name="description" id="description"
+                               th:field="*{description}">
+                    </div>
+                    <div class="form=group">
+                        <label for="city.id">Ряд</label>
+                        <select class="form-control" id="city.id" name="city.id">
+                            <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.name}"></option>
+                        </select>
+                    </div>
+                    <div class="form=group">
+                        <label for="city.id">Место</label>
+                        <select class="form-control" id="city.id" name="city.id">
+                            <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.name}"></option>
+                        </select>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Купить</button>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
 </body>
