--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,19 +23,7 @@
 </head>
 <body>
 <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Кинотеатр "ГОРИЗОНТ"</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link active" th:href="@{/}">Главная<span
-                        class="sr-only">(current)</span></a>
-            </div>
-        </div>
-    </nav>
+<header th:insert="blocks/header :: header"></header>
     <div class="row">
         <table class="table">
             <thead>
@@ -50,8 +38,8 @@
                 <td>
                     <a th:href="@{|/selectTicket/${cinema.id}|}">
                         <i class="fa fe-edit"></i>
+                        <span th:text="${cinema.name}"></span>
                     </a>
-                    <span th:text="${cinema.name}"></span>
                 </td>
             </tr>
             </tbody>
