--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -9,6 +9,8 @@
             <div class="navbar-nav">
                 <a class="nav-item nav-link active" th:href="@{/}">Главная<span
                         class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" th:href="@{/allTicket}">Купленные билеты<span
+                        class="sr-only">(current)</span></a>
             </div>
         </div>
     </nav>
